Mute use counters for internal pages

Whenever a new top-level page is loaded, the UseCounter state is reset.  This CL extends that infrastructure to pass along the URL of the page that's being loaded.  We then use the scheme of the URL to decide if tracking usage metrics is useful or not, to avoid polluting our metrics with results from webui, DevTools, etc.

This CL makes no changes to the "legacy" counter histograms in order to preserve their semantics while we transition to the new histograms.

BUG=652336

Review-Url: https://codereview.chromium.org/2604633002
Cr-Commit-Position: refs/heads/master@{#440660}

Former-commit-id: 146accf2581a4ac5184cc9c5f0f2e2a91bf4be23