third_party/WebKit/Source/core/page/Page.cpp
@@ -456,10 +456,14 @@ void Page::updateAcceleratedCompositingSettings() {
 
 void Page::didCommitLoad(LocalFrame* frame) {
   if (m_mainFrame == frame) {
+    KURL url;
+    if (frame->document())
+      url = frame->document()->url();
+
     // TODO(rbyers): Most of this doesn't appear to take into account that each
     // SVGImage gets it's own Page instance.
     frameHost().consoleMessageStorage().clear();
-    useCounter().didCommitLoad();
+    useCounter().didCommitLoad(url);
     deprecation().clearSuppression();
     frameHost().visualViewport().sendUMAMetrics();
 
