third_party/WebKit/Source/platform/weborigin/SchemeRegistry.cpp
@@ -238,6 +238,18 @@ bool SchemeRegistry::shouldTreatURLSchemeAsLegacy(const String& scheme) {
   return scheme == "ftp" || scheme == "gopher";
 }
 
+bool SchemeRegistry::shouldTrackUsageMetricsForScheme(const String& scheme) {
+  // The scheme represents content which likely cannot be easily updated.
+  // Specifically this includes internal pages such as about, chrome-devtools,
+  // etc.
+  // "chrome-extension" is not included because they have a single deployment
+  // point (the webstore) and are designed specifically for Chrome.
+  // "data" is not included because real sites shouldn't be using it for
+  // top-level
+  // pages and Chrome does use it internally (eg. PluginPlaceholder).
+  return scheme == "http" || scheme == "https" || scheme == "file";
+}
+
 void SchemeRegistry::registerURLSchemeAsAllowingServiceWorkers(
     const String& scheme) {
   DCHECK_EQ(scheme, scheme.lower());
